# pico-swd-loader

./: .gitignore  README.md  reload.sh
host/: CMakeLists.txt  elf_to_header.py  main.cpp  monitor.py  pio_helpers.cpp  swd_debug.cpp  swd_load.cpp  target_firmware.h
host/capture.csv/: digital.csv
target-sdk/: CMakeLists.txt  blink_sdk_minimal.c
target-usb-cdc/: CMakeLists.txt  usb_cdc_loopback.c
